# used-time-tracker

./: .gitignore  LICENSE  README.md  RELEASE.md
client/browser/: README.md  background.js  manifest.json  options.html  options.js  wxt.config.ts
client/browser/entrypoints/: background.ts
client/browser/entrypoints/popup/: App.tsx  index.html  main.tsx  style.css
client/dashboard/: README.md  drizzle.config.ts  next.config.ts  package.json  proxy.ts
client/dashboard/app/: dashboard-client.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  template.tsx
client/dashboard/app/components/: DashboardCharts.tsx  DashboardHeader.tsx  HourlyTimeline.tsx  SummaryCards.tsx  TimelineRow.tsx  TopAppsList.tsx
client/dashboard/components/: AppIcon.tsx  AppSettingsMenu.tsx  DashboardHeader.tsx  HourlyTimeline.tsx  SummaryCards.tsx  TimelineRow.tsx  TimelineSegment.tsx  TopAppRow.tsx  TopAppsList.tsx  mode-toggle.tsx
client/dashboard/hooks/: use-api-keys.ts  use-categories.ts  use-dashboard-stats.ts
client/dashboard/lib/: api-client.ts  auth-client.ts  favicon-cache.ts  favicon.ts
client/dashboard/store/: dashboard-store.ts
client/dashboard/utils/: dashboard-utils.ts  schema.ts  stats-merge.ts
client/windows/: Cargo.toml  README.md  build.rs  config.json  package.json  setup.iss
client/windows/src/: main.rs
server/: .gitignore  drizzle.config.ts  package.json  vercel.json
server/src/: auth.ts  index.ts
server/src/db/: categories.ts  index.ts  schema.ts
server/src/services/: ai.ts  auto-categorize.ts  favicon.ts
server/src/utils/: auth-utils.ts
(+98 files in other folders)
