[package]
name = "windows"
version = "0.1.0"
edition = "2024"

[dependencies]
active-win-pos-rs = "0.9.1"
chrono = { version = "0.4.43", features = ["serde"] }
iana-time-zone = "0.1.64"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
whoami = "2.0.2"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Threading",
    "Win32_Security",
] }
eframe = "0.29.1"
ctrlc = "3.5.1"

